// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration with apollo-server alias with fragment works 1`] = `
request
   finished: true

+-- a
      finished: true

   +-- dos
         finished: true


`;

exports[`integration with apollo-server alias works 1`] = `
request
   finished: true

+-- a
      finished: true

   +-- uno
         finished: true

   +-- two
         finished: true


`;

exports[`integration with apollo-server correct span nesting 1`] = `
request
   finished: true

+-- a
      finished: true

   +-- one
         finished: true

   +-- two
         finished: true


`;

exports[`integration with apollo-server does not start a field resolver span if the parent field resolver was not traced 1`] = `
request
   finished: true

+-- b
      finished: true

   +-- four
         finished: true


`;

exports[`integration with apollo-server implements traces for arrays 1`] = `
request
   finished: true

+-- as
      finished: true

   +-- one
         finished: true

   +-- two
         finished: true

   +-- one
         finished: true

   +-- two
         finished: true

   +-- one
         finished: true

   +-- two
         finished: true


`;
